# verus-rational

./: Cargo.toml  README.md  docs.md
.github/workflows/: check.yml
docs/: downstream-proofs-todo.md  runtime-rational-todo.md  verus-math-todo.md
scripts/: check-single-file.sh  check.sh  profile-modules.sh
src/: lib.rs  rational.rs  runtime_ops.rs  runtime_rational.rs
src/rational/: algebra.rs  applications.rs  applications.rs.bak  cauchy_schwarz.rs  cramer.rs  cramer_new.rs  division.rs  equivalence.rs  foundation.rs  horner.rs  mod.rs  ordering.rs  quadratic.rs  ring_algebra.rs  signum.rs
