[package]
name = "verus-rational"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { path = "../verus/source/vstd" }
verus-bigint = { path = "../verus-bigint" }
verus-algebra = { path = "../verus-algebra" }

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
